--- a/LookupDropdown/strings/LookupDropdown.1033.resx
+++ b/LookupDropdown/strings/LookupDropdown.1033.resx
@@ -67,4 +67,7 @@
   <data name="Error fetching data..." xml:space="preserve">
     <value>Error fetching data...</value> 
   </data>
+  <data name="Clear" xml:space="preserve">
+    <value>Clear</value> 
+  </data>
 </root>
