adjust parameters description

--- a/LookupDropdown/strings/LookupDropdown.1036.resx
+++ b/LookupDropdown/strings/LookupDropdown.1036.resx
@@ -70,4 +70,7 @@
   <data name="Clear" xml:space="preserve">
     <value>Effacer</value> 
   </data>
+  <data name="**no match**" xml:space="preserve">
+    <value>**aucune concordance**</value> 
+  </data>
 </root>
