--- a/LookupDropdown/strings/LookupDropdown.1033.resx
+++ b/LookupDropdown/strings/LookupDropdown.1033.resx
@@ -70,4 +70,7 @@
   <data name="Clear" xml:space="preserve">
     <value>Clear</value> 
   </data>
+  <data name="**no match**" xml:space="preserve">
+    <value>**no match**</value> 
+  </data>
 </root>
