--- a/stories/Introduction.mdx
+++ b/stories/Introduction.mdx
@@ -109,7 +109,7 @@ import { Meta } from '@storybook/addon-docs';
 
 # LookupDropdown PCF Storybook
 
-<img src="https://user-images.githubusercontent.com/38399134/147574921-388d1e41-3873-4a03-aa8d-9e64a103621f.png"></img>
+<img src="https://github.com/drivardxrm/LookupDropdown.PCF/assets/38399134/23f19a2d-5b04-4ea9-be41-01937e87e7f7"></img>
 
 
 <div className="tip-wrapper">
